Update the information
Update the GitHub link

--- a/crowdsourcing-data/README
+++ b/crowdsourcing-data/README
@@ -1,3 +1,7 @@
 This directory contains the crowdsourcing results for AdultCensus and COMPAS datasets.
 
 The detailed information is provided in each README file of datasets.
+
+You can also get the crowdsourced data in https://github.com/yuji-roh/crowdsourcing-data
+
+Thank you.
